--- a/node/koa2/rest/rest-koa/views/index.html
+++ b/node/koa2/rest/rest-koa/views/index.html
@@ -84,7 +84,7 @@ $(function () {
                         <tbody>
                             <tr v-for="p in products">
                                 <td>
-                                    <img class="media-object" style="width:40px; height:40px;" src="/static/images/icon.png">
+                                    <img class="media-object" style="width:40px; height:40px;" src="images/icon.png">
                                 </td>
                                 <td>
                                     <h4 class="media-heading" v-text="p.name"></h4>
