--- a/node/koa2/rest/rest-koa/views/base.html
+++ b/node/koa2/rest/rest-koa/views/base.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="learn javascript by www.liaoxuefeng.com">
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/vue.min.js"></script>
-    <script src="/static/js/bootstrap.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/vue.min.js"></script>
+    <script src="js/bootstrap.js"></script>
 </head>
 
 <body>
@@ -40,8 +40,8 @@
     <footer style="background-color:#ddd; padding: 20px 0;">
         <div class="container">
             <p>
-                <a target="_blank" href="http://www.liaoxuefeng.com">Website</a> - 
-                <a target="_blank" href="https://github.com/michaelliao/learn-javascript">GitHub</a> - 
+                <a target="_blank" href="http://www.liaoxuefeng.com">Website</a> -
+                <a target="_blank" href="https://github.com/michaelliao/learn-javascript">GitHub</a> -
                 <a target="_blank" href="http://weibo.com/liaoxuefeng">Weibo</a>
             </p>
             <p>This JavaScript course is created by <a target="_blank" href="http://weibo.com/liaoxuefeng">@廖雪峰</a>.</p>
